--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -50,6 +50,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:sectionText="@{item.section}"
+                    app:sectionTextColor="@{item.section}"
                     tools:text="@string/section_2"
                     tools:textColor="?attr/colorPrimary"/>
 
