--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,12 @@
             app:defaultNavHost="true"
             app:navGraph="@navigation/nav_graph"/>
 
+        <fragment
+            android:id="@+id/bottom_nav_drawer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="my.handbook.ui.drawer.DrawerFragment"/>
+
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottom_app_bar"
             android:layout_width="match_parent"
@@ -39,13 +45,21 @@
                 android:gravity="center_vertical"
                 android:foreground="@drawable/bottom_app_bar_title_foreground">
 
+                <ImageView
+                    android:id="@+id/bottom_app_bar_chevron"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    app:tint="?attr/colorOnPrimarySurface"
+                    app:srcCompat="@drawable/ic_round_arrow_drop_up"/>
+
                 <TextView
                     android:id="@+id/bottom_app_bar_title"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginHorizontal="@dimen/grid_1"
+                    android:layout_marginHorizontal="@dimen/grid_0_5"
                     android:text="@string/app_name"
                     android:textColor="?attr/colorControlNormal"/>
 
