--- a/app/src/main/res/layout/item_drawer_divider.xml
+++ b/app/src/main/res/layout/item_drawer_divider.xml
@@ -13,6 +13,8 @@
         android:id="@+id/divider_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/grid_4"
+        android:paddingRight="@dimen/grid_4"
         android:layout_marginVertical="@dimen/grid_2"
         android:layout_marginHorizontal="@dimen/grid_4"
         android:text="@{dividerItem.titleRes}"
