--- a/app/src/demo/res/values/sections.xml
+++ b/app/src/demo/res/values/sections.xml
@@ -1,9 +1,9 @@
 <resources>
 
     <string-array name="section_names">
-        <item>@string/section_1</item>
-        <item>@string/section_2</item>
-        <item>@string/section_3</item>
+        <item>Basics</item>
+        <item>Classes and Objects</item>
+        <item>Functions and Lambdas</item>
     </string-array>
 
 </resources>
