--- a/billing/src/main/res/layout/fragment_billing.xml
+++ b/billing/src/main/res/layout/fragment_billing.xml
@@ -3,27 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-        <variable
-            name="loading"
-            type="Boolean"/>
-    </data>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:transitionGroup="true">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="@dimen/grid_0_25"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/product_recycler_padding_top"
+            android:paddingBottom="@dimen/product_recycler_padding_bottom"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_product"
-            tools:itemCount="6"/>
+            tools:itemCount="3"/>
 
     </LinearLayout>
 
