--- a/billing/src/main/res/layout/fragment_billing.xml
+++ b/billing/src/main/res/layout/fragment_billing.xml
@@ -12,6 +12,7 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:overScrollMode="never"
             android:paddingTop="@dimen/product_recycler_padding_top"
             android:paddingBottom="@dimen/product_recycler_padding_bottom"
             android:orientation="vertical"
