--- a/billing/src/main/res/layout/item_product.xml
+++ b/billing/src/main/res/layout/item_product.xml
@@ -25,7 +25,7 @@
         android:ellipsize="end"
         android:lines="1"
         android:text="@{item.title}"
-        android:textColor="?attr/colorOnPrimarySurface"
+        android:textColor="?attr/colorControlNormal"
         android:textAppearance="?attr/textAppearanceSubtitle1"
         android:drawablePadding="@dimen/product_item_drawable_padding"
         app:productIcon="@{item}"
