--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,8 +5,8 @@
 
     <data>
         <variable
-            name="loading"
-            type="Boolean"/>
+            name="model"
+            type="my.handbook.ui.base.BaseViewModel"/>
     </data>
 
     <LinearLayout
@@ -42,7 +42,7 @@
                     android:inputType="textNoSuggestions"
                     android:drawableEnd="@drawable/avd_progress_circular"
                     android:importantForAutofill="no"
-                    app:loadingAnimation="@{loading}"/>
+                    app:loadingAnimation="@{model.isLoading}"/>
 
             </FrameLayout>
 
@@ -55,7 +55,7 @@
             android:backgroundTint="@color/material_on_surface_stroke"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+            android:id="@+id/search_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="@dimen/grid_0_25"
