--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -14,22 +14,22 @@
     </data>
 
     <FrameLayout
-        android:id="@+id/item_frame"
+        android:id="@+id/article_layout"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginVertical="@dimen/grid_0_25"
         android:layout_marginHorizontal="@dimen/grid_0_5"
-        android:background="?attr/colorSecondary">
+        android:background="?colorSecondary">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/card_view"
+            android:id="@+id/article_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="@dimen/plane_00"
             android:clickable="true"
             android:focusable="true"
             app:cardPreventCornerOverlap="false"
-            android:onClick="@{(v) -> listener.onArticleClicked(v, item.file)}">
+            android:onClick="@{() -> listener.onArticleClicked(item.file)}">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -38,64 +38,64 @@
                 android:paddingBottom="@dimen/grid_2">
 
                 <TextView
-                    android:textAppearance="?attr/textAppearanceBody2"
-                    android:id="@+id/section_text_view"
+                    android:id="@+id/article_text_section"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/grid_1"
                     android:layout_marginStart="@dimen/grid_2"
                     android:layout_marginEnd="@dimen/grid_2"
+                    android:textAppearance="?textAppearanceBody2"
                     android:maxLines="1"
-                    app:layout_constraintEnd_toStartOf="@+id/image_view"
+                    app:layout_constraintEnd_toStartOf="@id/article_image"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:sectionText="@{item.section}"
                     app:sectionTextColor="@{item.section}"
                     tools:text="@string/section_2"
-                    tools:textColor="?attr/colorPrimary"/>
+                    tools:textColor="?colorPrimary"/>
 
                 <TextView
-                    android:id="@+id/title_text_view"
+                    android:id="@+id/article_text_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/grid_1"
                     android:layout_marginEnd="@dimen/grid_2"
                     android:layout_marginStart="@dimen/grid_2"
-                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textAppearance="?textAppearanceHeadline6"
                     android:maxLines="2"
                     android:ellipsize="end"
                     android:text="@{item.title}"
                     tools:text="Continuous Random Variables"
                     app:layout_goneMarginEnd="@dimen/grid_2"
-                    app:layout_constraintEnd_toStartOf="@+id/image_view"
+                    app:layout_constraintEnd_toStartOf="@id/article_image"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/section_text_view"/>
+                    app:layout_constraintTop_toBottomOf="@id/article_text_section"/>
 
                 <TextView
-                    android:textAppearance="?attr/textAppearanceBody1"
-                    android:id="@+id/paragraphs_text_view"
+                    android:id="@+id/article_text_paragraphs"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/grid_1"
                     android:layout_marginStart="@dimen/grid_2"
                     android:layout_marginEnd="@dimen/grid_2"
                     android:text="@{item.summary}"
+                    android:textAppearance="?textAppearanceBody1"
                     android:maxLines="2"
                     android:ellipsize="end"
                     tools:text="Definition, Properties, Normal Random Variables, Probability Density Function PDF, Examples"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/title_text_view"/>
+                    app:layout_constraintTop_toBottomOf="@id/article_text_title"/>
 
                 <ImageView
-                    android:id="@+id/image_view"
+                    android:id="@+id/article_image"
                     android:layout_width="@dimen/label_image_size"
                     android:layout_height="@dimen/label_image_size"
                     android:src="@drawable/ic_twotone_book"
                     android:layout_marginTop="@dimen/grid_1"
                     android:layout_marginStart="@dimen/grid_2"
                     android:layout_marginEnd="@dimen/grid_2"
-                    app:tint="?attr/colorPrimary"
+                    app:tint="?colorPrimary"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
 
