--- a/billing/src/main/res/layout/fragment_billing.xml
+++ b/billing/src/main/res/layout/fragment_billing.xml
@@ -1,25 +1,21 @@
-<layout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/products_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:overScrollMode="never"
+        android:paddingTop="@dimen/product_recycler_padding_top"
+        android:paddingBottom="@dimen/product_recycler_padding_bottom"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_product"
+        tools:itemCount="3" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:overScrollMode="never"
-            android:paddingTop="@dimen/product_recycler_padding_top"
-            android:paddingBottom="@dimen/product_recycler_padding_bottom"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_product"
-            tools:itemCount="3"/>
-
-    </LinearLayout>
-
-</layout>
+</LinearLayout>
