Remove all repositories and add use cases

--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="item"
-            type="my.handbook.data.db.entity.SearchResult"/>
+            type="my.handbook.data.entity.SearchResult"/>
         <variable
             name="listener"
             type="my.handbook.ui.search.SearchResultAdapter.SearchResultAdapterListener"/>
