--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="item"
-            type="my.handbook.data.db.entity.Article"/>
+            type="my.handbook.data.entity.Article"/>
         <variable
             name="listener"
             type="my.handbook.ui.home.ArticleAdapter.ArticleAdapterListener"/>
