--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
         android:id="@+id/coordinator_layout"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutFullscreen="@{true}"
         tools:context=".ui.MainActivity">
 
         <fragment
@@ -17,13 +15,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_graph"/>
+            app:navGraph="@navigation/nav_graph" />
 
         <fragment
             android:id="@+id/bottom_nav_drawer"
+            android:name="my.handbook.ui.drawer.DrawerFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:name="my.handbook.ui.drawer.DrawerFragment"/>
+            android:layout_height="match_parent" />
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottom_app_bar"
@@ -31,8 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             app:fabAlignmentMode="center"
-            app:fabCradleRoundedCornerRadius="@dimen/bottom_app_bar_fab_cradle_corner_radius"
             app:fabCradleMargin="@dimen/bottom_app_bar_fab_cradle_margin"
+            app:fabCradleRoundedCornerRadius="@dimen/bottom_app_bar_fab_cradle_corner_radius"
             app:hideOnScroll="true">
 
             <LinearLayout
@@ -40,28 +38,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/min_touch_target_size"
                 android:layout_marginVertical="@dimen/grid_0_5"
-                android:paddingHorizontal="@dimen/grid_0_5"
-                android:orientation="horizontal"
+                android:foreground="@drawable/bottom_app_bar_title_foreground"
                 android:gravity="center_vertical"
-                android:foreground="@drawable/bottom_app_bar_title_foreground">
+                android:orientation="horizontal"
+                android:paddingHorizontal="@dimen/grid_0_5">
 
                 <ImageView
                     android:id="@+id/bottom_app_bar_chevron"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    app:tint="?attr/colorOnPrimarySurface"
-                    app:srcCompat="@drawable/ic_round_arrow_drop_up"/>
+                    app:srcCompat="@drawable/ic_round_arrow_drop_up"
+                    app:tint="?colorOnPrimarySurface" />
 
                 <TextView
                     android:id="@+id/bottom_app_bar_title"
-                    android:textAppearance="?attr/textAppearanceBody1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginHorizontal="@dimen/grid_0_5"
                     android:text="@string/app_name"
-                    android:textColor="?attr/colorControlNormal"/>
+                    android:textAppearance="?textAppearanceBody1"
+                    android:textColor="?colorControlNormal" />
 
             </LinearLayout>
 
@@ -71,9 +69,9 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/fab_search_content_description"
             app:layout_anchor="@id/bottom_app_bar"
-            app:srcCompat="@drawable/ic_search"
-            android:contentDescription="@string/fab_search_content_description"/>
+            app:srcCompat="@drawable/ic_search" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
