--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!--Color palette-->
-    <color name="handbook_white_50">#ffffff</color>
-
+    <!--region Black-->
     <color name="handbook_black_800">#121212</color>
     <color name="handbook_black_900">#000000</color>
+    <color name="handbook_black_900_alpha_020">#33000000</color>
+    <color name="handbook_black_900_alpha_087">#de000000</color>
+    <color name="handbook_black_900_alpha_060">#99000000</color>
+    <!--endregion-->
 
+    <!--region Blue-->
     <color name="handbook_blue_50">#eef0f2</color>
     <color name="handbook_blue_100">#d2dbe0</color>
     <color name="handbook_blue_200">#adbbc4</color>
@@ -14,27 +16,29 @@
     <color name="handbook_blue_600">#4a6572</color>
     <color name="handbook_blue_700">#344955</color>
     <color name="handbook_blue_800">#232f34</color>
+    <color name="handbook_blue_50_alpha_060">#99eef0f2</color>
+    <!--endregion-->
 
+    <!--region Orange-->
     <color name="handbook_orange_300">#fbd790</color>
     <color name="handbook_orange_400">#f9be64</color>
     <color name="handbook_orange_500">#f9aa33</color>
+    <!--endregion-->
 
+    <!--region Red-->
     <color name="handbook_red_200">#cf7779</color>
     <color name="handbook_red_400">#ff4c5d</color>
+    <!--endregion-->
 
+    <!--region White-->
+    <color name="handbook_white_50">#ffffff</color>
     <color name="handbook_white_50_alpha_060">#99ffffff</color>
-
-    <color name="handbook_blue_50_alpha_060">#99eef0f2</color>
-
-    <color name="handbook_black_900_alpha_020">#33000000</color>
-    <color name="handbook_black_900_alpha_087">#de000000</color>
-    <color name="handbook_black_900_alpha_060">#99000000</color>
+    <!--endregion-->
 
     <!--Nav bar color protection for behavior differences between Android P and Q. All sdk-->
     <!--levels should draw fullscreen. P should color the nav bar with a translucent background -->
     <!--to guard for contrast. Q should have a transparent nav bar as Q will automatically -->
     <!--handles contrast by either dynamically coloring the nav bar handle (gesture nav) -->
-    <!--or automatically applying a translucent background (3-button mode).-->
+    <!--or automatically applying a translucent background (3-button mode)-->
     <color name="nav_bar">@color/handbook_black_900_alpha_020</color>
-
 </resources>
