Refactor drawable resources

--- a/app/src/main/res/drawable/progress_drawable.xml
+++ b/app/src/main/res/drawable/progress_drawable.xml
@@ -1,5 +1,4 @@
-<animated-vector
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt">
 
     <aapt:attr name="android:drawable">
@@ -7,8 +6,8 @@
             android:width="24dp"
             android:height="24dp"
             android:tint="?attr/colorPrimary"
-            android:viewportHeight="48"
-            android:viewportWidth="48">
+            android:viewportWidth="48"
+            android:viewportHeight="48">
             <group
                 android:name="progressBarContainer"
                 android:translateX="24"
@@ -17,13 +16,13 @@
                     android:name="progressBar"
                     android:fillColor="@android:color/transparent"
                     android:pathData="M0,0 m 0,-18 a 18,18 0 1,1 0,36 a 18,18 0 1,1 0,-36"
+                    android:strokeWidth="4"
                     android:strokeColor="@android:color/white"
                     android:strokeLineCap="square"
                     android:strokeLineJoin="miter"
-                    android:strokeWidth="4"
+                    android:trimPathStart="0"
                     android:trimPathEnd="0.03"
-                    android:trimPathOffset="0"
-                    android:trimPathStart="0"/>
+                    android:trimPathOffset="0" />
             </group>
         </vector>
     </aapt:attr>
@@ -39,8 +38,7 @@
                     android:valueTo="0.75"
                     android:valueType="floatType">
                     <aapt:attr name="android:interpolator">
-                        <pathInterpolator
-                            android:pathData="L0.5,0 C 0.7,0 0.6,1 1,1"/>
+                        <pathInterpolator android:pathData="L0.5,0 C 0.7,0 0.6,1 1,1" />
                     </aapt:attr>
                 </objectAnimator>
                 <objectAnimator
@@ -51,8 +49,7 @@
                     android:valueTo="0.78"
                     android:valueType="floatType">
                     <aapt:attr name="android:interpolator">
-                        <pathInterpolator
-                            android:pathData="C0.2,0 0.1,1 0.5,0.96 C 0.96666666666,0.96 0.99333333333,1 1,1"/>
+                        <pathInterpolator android:pathData="C0.2,0 0.1,1 0.5,0.96 C 0.96666666666,0.96 0.99333333333,1 1,1" />
                     </aapt:attr>
                 </objectAnimator>
                 <objectAnimator
@@ -62,7 +59,7 @@
                     android:repeatCount="-1"
                     android:valueFrom="0"
                     android:valueTo="0.25"
-                    android:valueType="floatType"/>
+                    android:valueType="floatType" />
             </set>
         </aapt:attr>
     </target>
@@ -76,7 +73,7 @@
                 android:repeatCount="-1"
                 android:valueFrom="0"
                 android:valueTo="720"
-                android:valueType="floatType"/>
+                android:valueType="floatType" />
         </aapt:attr>
     </target>
 
