--- a/app/src/main/res/animator/fab_show.xml
+++ b/app/src/main/res/animator/fab_show.xml
@@ -2,24 +2,24 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:ordering="together">
     <objectAnimator
+        android:duration="@integer/handbook_motion_duration_small"
+        android:interpolator="@android:interpolator/fast_out_slow_in"
         android:propertyName="scale"
-        android:valueFrom="0"
-        android:valueTo="1"
-        android:duration="@integer/handbook_motion_duration_small"
         android:repeatMode="restart"
-        android:interpolator="@android:interpolator/fast_out_slow_in"/>
+        android:valueFrom="0"
+        android:valueTo="1" />
     <objectAnimator
+        android:duration="@integer/handbook_motion_duration_small"
+        android:interpolator="@android:interpolator/fast_out_slow_in"
         android:propertyName="iconScale"
-        android:valueFrom="0"
-        android:valueTo="1"
-        android:duration="@integer/handbook_motion_duration_small"
         android:repeatMode="restart"
-        android:interpolator="@android:interpolator/fast_out_slow_in"/>
+        android:valueFrom="0"
+        android:valueTo="1" />
     <objectAnimator
-        android:propertyName="opacity"
-        android:valueFrom="0"
-        android:valueTo="1"
         android:duration="@integer/handbook_motion_duration_small"
+        android:interpolator="@android:interpolator/fast_out_slow_in"
+        android:propertyName="opacity"
         android:repeatMode="restart"
-        android:interpolator="@android:interpolator/fast_out_slow_in"/>
+        android:valueFrom="0"
+        android:valueTo="1" />
 </set>
