--- a/app/src/main/res/drawable/bottom_app_bar_title_foreground.xml
+++ b/app/src/main/res/drawable/bottom_app_bar_title_foreground.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="?attr/colorControlHighlight">
-    <item android:id="@android:id/mask"
-        android:gravity="center_vertical"
-        android:height="40dp">
+    <item
+        android:id="@android:id/mask"
+        android:height="40dp"
+        android:gravity="center_vertical">
         <shape android:shape="rectangle">
-            <corners android:radius="@dimen/handbook_small_component_corner_radius"/>
-            <solid android:color="#fff"/>
+            <corners android:radius="@dimen/handbook_small_component_corner_radius" />
+            <solid android:color="#fff" />
         </shape>
     </item>
 </ripple>
